<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

		<PreferenceScreen android:title="@string/prefsCatImportExportTitle"
			android:summary="@string/prefsCatImportExportSummary">
			<Preference android:title="@string/exportTitle"
				android:summary="@string/exportSummary"
				android:key="export" />
			<Preference android:title="@string/importTitle"
				android:summary="@string/importSummary"
				android:key="import" />
		</PreferenceScreen>
		<CheckBoxPreference android:key="recMode"
            android:title="@string/prefsModeTitle"
            android:summary="@string/prefsModeSummary" />
		<EditTextPreference android:key="inter"
		    android:title="@string/prefsTimerTitle"
		    android:defaultValue="10"
		    android:inputType="number"/>

</PreferenceScreen>
