<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">

	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/header"
		android:padding="4dip">

		<ImageView
		    android:id="@+id/icon"
		    android:layout_width="48dip"
		    android:layout_height="48dip"
		    android:layout_alignParentLeft="true"
		    android:padding="4dip"
		    android:src="@drawable/icon" >

		</ImageView>
		<TextView android:id="@+id/title"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/appDescription"
			android:textSize="16sp"
            android:textStyle="bold"
			android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/icon"
			android:padding="2dip"
			android:shadowColor="#cccccc"
			android:shadowRadius="4">
		</TextView>
		
		

	</RelativeLayout>
	
	
	<RelativeLayout
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/interactiveCtnt"
        android:padding="4dip">
	
	<TextView android:id="@+id/currentMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/modeRec"
            android:textSize="14sp"
            android:padding="2dip"
            android:textColor="@color/AliceBlue">
        </TextView>
	
	<Button android:id="@+id/startButton"
	  android:layout_width="fill_parent"
	  android:layout_margin="40dp"
      android:layout_height="70dip"
      android:layout_below="@+id/currentMode"
      android:text="@string/start" 
      android:onClick="changeSendState" />

	<LinearLayout android:id="@+id/directionButtons"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_below="@+id/startButton"
    android:layout_height="wrap_content" >
		
		<Button android:id="@+id/fwdButton"
	      android:layout_width="0dip"
	      android:layout_height="wrap_content"
	      android:layout_weight="0.5"
	      android:text="@string/forward" />
	    
	    <Button android:id="@+id/bkwButton"
	      android:layout_width="0dip"
	      android:layout_height="wrap_content"
	      android:layout_weight="0.5"
	      android:text="@string/backward" />
	    
	</LinearLayout>
	
	<Button android:id="@+id/rstButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:text="@string/reset"
      android:onClick="resetData" />
	</RelativeLayout>
</LinearLayout>